refactor - no es necesario el codigo de cuatrimestre en inscripcion